--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,14 @@ __pycache__/
 *.pyo
 *.pyd
 
-**/abcd
-**/abcd.*
-
 # Virtual environments
 .env/
 .venv/
 cnn_venv/
+
+main.*
+
+storage/
 
 # Jupyter notebook checkpoints
 *.ipynb_checkpoints/
